Angularified our app

--- a/client/templates/pointMotionCarList.html
+++ b/client/templates/pointMotionCarList.html
@@ -1,3 +1,11 @@
 <div ng-repeat="car in cars">
-	<div>{{car.selected}}</div>
+					<a href="#" class="cell">
+						<div class="cell-wrapper">
+							<div class="cell-content">
+							</div>
+							<div class="cell-footer">
+								{{car.selected}}
+							</div>
+						</div>
+					</a>
 </div>
