--- a/client/templates/pointMotionCarList.html
+++ b/client/templates/pointMotionCarList.html
@@ -1,5 +1,5 @@
 <div ng-repeat="car in cars">
-					<a href="#" class="cell">
+					<a href="#" class="cell" ng-class="{test:car.selected}">
 						<div class="cell-wrapper">
 							<div class="cell-content">
 							</div>
