--- a/client/css/style.css
+++ b/client/css/style.css
@@ -112,54 +112,115 @@ a.transparent-black {
 }
 .studenthack-image {
 	width: 200px;
+	max-width: 100%;
 	display: block;
 	margin: 0 auto;
 }
 
-/* menu */
+/* menus */
 
 .menu {
-	background-color: #CCC;
+	background-image: url('../img/landscape3_blur.jpg');
+	background-repeat: no-repeat; 
+	background-position: bottom;
+	background-size: cover;
 	overflow: hidden;
 }
-.menu .banner-text{
+.menu .banner-text {
 	margin-top: 0;
 }
-.grid {
-	width: 90%;
-	height: 100%;
-	margin: 0 auto;
+.menu .banner-text h1 {
+	margin-top: 0px;
+	margin-bottom: 75px;
 }
-a.cell {
+.grid {
+	border-radius: 10px;
+	clear: both;
+	width: 90%;
+	margin: 0 auto;
+	padding: 5px;
+}
+.cell {
 	border-radius: 8px;
 	float: left;
 	width: 25%;
-	opacity: 1;
-	transition: opacity .25s;
 }
-a.cell:hover {
-	opacity: .75;
-	transition: opacity .25s;
+a.cell-wrapper {
+	display: block;
+	border: 4px solid rgba(0,0,0,0);
+	border-radius: 4px;
+	background-color: none;
+	margin: 5px 5px 5px 5px;
+	text-align: center;	
 }
-a.cell.highlighted {
-	opacity: .75;
-	transition: opacity .25s;
+a.cell-wrapper.highlighted {
+	border: 4px solid #FFF;
+	border-radius: 4px;
+	background-color: none;
+	margin: 5px 5px 5px 5px;
+	text-align: center;
 }
-.cell-wrapper {
-	border-radius: 8px;
-	background-color: #555;
-	margin: 25px 25px 25px 25px;
+a.cell-wrapper:hover {
+	border: 4px solid #FFF;
+	border-radius: 4px;
+	background-color: none;
+	margin: 5px 5px 5px 5px;
+	text-align: center;
 }
-.cell-content {
-	background-color: #555;
+.cell-image {
+	width: auto;
+	max-width: 100%;
 	height: 150px;
 	border-radius: 8px;
 }
 .cell-footer {
-	border-radius: 0px 0px 8px 8px;
 	color: #FFF;
-	height: 50px;
-	padding: 0px 10px;
+	height: 100px;
+	padding: 10px 10px;
 	line-height: 50px;
-	background-color: rgba(0,0,0,0.2);
+	background-color: rgba(0,0,0,.5);
+	border-radius: 4px;
+}
+.cell-footer-left {
+	float: left;
+	text-align: left;
+	width: 50%;
+	line-height: normal;
+}
+.cell-footer-right {
+	float: right;
+	text-align: left;
+	width: 50%;
+	line-height: normal;
+}
+
+/* progress */
+
+.progress {
+	width: 504px;
+	margin: 0 auto;
+	margin-bottom: 25px;
+	overflow: auto;
+}
+.progress ul {
+	padding: 0;
+	margin: 0 auto;
+}
+.progress ul li {
+	height: 30px;
+	line-height: 30px;
+	border-right: 1px solid #CCC;
+	width: 100px;
+	list-style-type: none;
+	float: left;
+	background-color: #FFF;
+	text-align: center;
+}
+.progress ul li:first-child {
+	border-radius: 5px 0px 0px 5px;
+	background-color: #08C;
+}
+.progress ul li:last-child {
+	border-right: none;
+	border-radius: 0px 5px 5px 0px;
 }
