Removed onload attribute

--- a/client/templates/pointMotionCarList.html
+++ b/client/templates/pointMotionCarList.html
@@ -1,6 +1,6 @@
 <div ng-repeat="car in cars">
 					<div class="cell" >
-						<a href="#" onclick="activate-2()" class="cell-wrapper" ng-class="{highlighted:car.highlighted}">
+						<a href="#" class="cell-wrapper" ng-class="{highlighted:car.highlighted}">
 							<img class="cell-image" src="img/landscape_blur.jpg" />
 							<div class="cell-footer">
 								<div class="cell-footer-left">
