--- a/client/css/style.css
+++ b/client/css/style.css
@@ -149,9 +149,9 @@ a.cell-wrapper {
 	display: block;
 	border: 4px solid rgba(0,0,0,0);
 	border-radius: 4px;
-	background-color: none;
 	margin: 5px 5px 5px 5px;
 	text-align: center;	
+	background-color: rgba(0,0,0,.2);
 }
 a.cell-wrapper.highlighted {
 	border: 4px solid #FFF;
