--- a/client/templates/pointMotionCarList.html
+++ b/client/templates/pointMotionCarList.html
@@ -1,21 +1,21 @@
 <div ng-repeat="car in cars">
-					<div class="cell" >
-						<a href="#" class="cell-wrapper" ng-class="{highlighted:car.highlighted}">
+					<div class="cell">
+						<a ng-click="select(car)" class="cell-wrapper" ng-class="{highlighted:car.highlighted}">
 							<img class="cell-image" src="img/landscape_blur.jpg"  ng-src="{{car.image}}"/>
 							<div class="cell-footer">
 								<div class="cell-footer-left">
-									<strong>Make:</strong> Vauxhall<br />
-									<strong>Model:</strong> Astra<br />
-									<strong>Condition:</strong> New<br />
-									<strong>Year:</strong> 2013<br />
-									<strong>Mileage:</strong> -
+									<strong>Make:</strong> {{car.car_specs.make}}<br />
+									<strong>Model:</strong> {{car.car_specs.model}}<br />
+									<strong>Condition:</strong> {{car.car_specs.condition}}<br />
+									<strong>Year:</strong> {{car.car_specs.yearOfManufacture}}<br />
+									<strong>Mileage:</strong> - {{car.car_specs.mileage}}{{car.car_specs.vehicleMileageUnit}}
 								</div>
 								<div class="cell-footer-right">
-									<strong>Transmission:</strong> Manual<br />
-									<strong>Number of Doors:</strong> 5<br />
-									<strong>Fuel:</strong> Petrol<br />
-									<strong>Engine Size:</strong> 1.6L<br />
-									<strong>Price:</strong> {{car.price}}
+									<strong>Transmission:</strong> {{car.car_specs.transmission}}<br />
+									<strong>Number of Doors:</strong> {{car.car_specs.numDoors}}<br />
+									<strong>Fuel:</strong> {{car.car_specs.fuelType}}<br />
+									<strong>Engine Size:</strong> {{car.car_specs.engineSize}}<br />
+									<strong>Price:</strong> £{{car.price}}
 								</div>
 							</div>
 						</a>
