--- a/client/templates/pointMotionCarList.html
+++ b/client/templates/pointMotionCarList.html
@@ -8,7 +8,7 @@
 									<strong>Model:</strong> {{car.car_specs.model}}<br />
 									<strong>Condition:</strong> {{car.car_specs.condition}}<br />
 									<strong>Year:</strong> {{car.car_specs.yearOfManufacture}}<br />
-									<strong>Mileage:</strong> - {{car.car_specs.mileage}}{{car.car_specs.vehicleMileageUnit}}
+									<strong>Mileage:</strong> {{car.car_specs.mileage}}{{car.car_specs.vehicleMileageUnit}}
 								</div>
 								<div class="cell-footer-right">
 									<strong>Transmission:</strong> {{car.car_specs.transmission}}<br />
